--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,18 @@
             <artifactId>logback-classic</artifactId>
             <version>LATEST</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>6.14.3</version>
+            <scope>test</scope>
+        </dependency>
 
 
     </dependencies>
