--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>security</module>
         <module>REST</module>
         <module>UI</module>
+        <module>web</module>
     </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
