well its running but noone know where

--- a/REST/pom.xml
+++ b/REST/pom.xml
@@ -1,15 +1,116 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>PneuServiceApp</artifactId>
-        <groupId>cz.fi.muni.pa165</groupId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
-    <modelVersion>4.0.0</modelVersion>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<modelVersion>4.0.0</modelVersion>
+<parent>
+<groupId>cz.fi.muni.pa165</groupId>
+<artifactId>PneuServiceApp</artifactId>
+<version>1.0-SNAPSHOT</version>
+</parent>
+<artifactId>rest</artifactId>
+<packaging>war</packaging>
+<name>Rest Layer</name>
+<build>
+<plugins>
+ <!--   embedded tomcat 8  -->
+<plugin>
+<groupId>org.codehaus.cargo</groupId>
+<artifactId>cargo-maven2-plugin</artifactId>
+</plugin>
+</plugins>
+</build>
+<dependencies>
+<dependency>
+<groupId>cz.fi.muni.pa165</groupId>
+<artifactId>api</artifactId>
+<version>${project.parent.version}</version>
+</dependency>
+<dependency>
+<groupId>cz.fi.muni.pa165</groupId>
+<artifactId>service</artifactId>
+<version>${project.parent.version}</version>
+</dependency>
+<dependency>
+<groupId>org.apache.tomcat</groupId>
+<artifactId>tomcat-api</artifactId>
+<version>${tomcat.version}</version>
+<scope>provided</scope>
+</dependency>
+<dependency>
+<groupId>cz.muni.fi.pa165</groupId>
+<artifactId>eshop-sample-data</artifactId>
+<version>${project.parent.version}</version>
+</dependency>
+<dependency>
+<groupId>cz.muni.fi.pa165</groupId>
+<artifactId>eshop-service</artifactId>
+<version>${project.parent.version}</version>
+</dependency>
+<!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
+<dependency>
+    <groupId>javax.inject</groupId>
+    <artifactId>javax.inject</artifactId>
+    <version>1</version>
+</dependency>
 
-    <artifactId>REST</artifactId>
+<dependency>
+<groupId>org.springframework</groupId>
+<artifactId>spring-webmvc</artifactId>
+</dependency>
+<dependency>
+<groupId>org.springframework.hateoas</groupId>
+<artifactId>spring-hateoas</artifactId>
+</dependency>
+<dependency>
+<groupId>com.jayway.jsonpath</groupId>
+<artifactId>json-path</artifactId>
+<version>${json-path.version}</version>
+</dependency>
+<dependency>
+<groupId>com.fasterxml.jackson.core</groupId>
+<artifactId>jackson-core</artifactId>
+</dependency>
+<dependency>
+<groupId>com.fasterxml.jackson.core</groupId>
+<artifactId>jackson-annotations</artifactId>
+</dependency>
+<dependency>
+<groupId>com.fasterxml.jackson.core</groupId>
+<artifactId>jackson-databind</artifactId>
+</dependency>
+<dependency>
+<groupId>ch.qos.logback</groupId>
+<artifactId>logback-classic</artifactId>
+</dependency>
+ <!--  librarries needed for unit tests  -->
+<!-- https://mvnrepository.com/artifact/org.testng/testng -->
+<dependency>
+    <groupId>org.testng</groupId>
+    <artifactId>testng</artifactId>
+    <version>7.1.0</version>
+    <scope>test</scope>
+</dependency>
 
-
+<dependency>
+<groupId>org.springframework</groupId>
+<artifactId>spring-test</artifactId>
+<scope>test</scope>
+</dependency>
+<dependency>
+<groupId>org.mockito</groupId>
+<artifactId>mockito-core</artifactId>
+<scope>test</scope>
+</dependency>
+<dependency>
+<groupId>org.hamcrest</groupId>
+<artifactId>hamcrest-core</artifactId>
+<scope>test</scope>
+</dependency>
+<dependency>
+<groupId>org.glassfish</groupId>
+<artifactId>jakarta.el</artifactId>
+<scope>test</scope>
+ <!--
+ conflicts with tomcat libraries, but needed for tests to run 
+-->
+</dependency>
+</dependencies>
 </project>
