--- a/web/pom.xml
+++ b/web/pom.xml
@@ -95,5 +95,10 @@
       <artifactId>service</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.hateoas</groupId>
+      <artifactId>spring-hateoas</artifactId>
+      <version>1.0.5.RELEASE</version>
+    </dependency>
   </dependencies>
 </project>
