--- a/REST/pom.xml
+++ b/REST/pom.xml
@@ -45,6 +45,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
+                <version>3.2.3</version>
                 <configuration>
                     <webXml>src\main\web\WEB-INF\web.xml</webXml>
                 </configuration>
