--- a/REST/src/main/web/WEB-INF/web.xml
+++ b/REST/src/main/web/WEB-INF/web.xml
@@ -3,5 +3,18 @@
         "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-    <display-name>REST Interface</display-name>
+    <display-name>Spring Secured Application</display-name>
+
+    <!-- Spring MVC -->
+    <!-- ... -->
+
+    <!-- Spring Security -->
+    <filter>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>springSecurityFilterChain</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 </web-app>
