--- a/service/pom.xml
+++ b/service/pom.xml
@@ -41,6 +41,11 @@
             <version>3.3.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.3.2.RELEASE</version>
+        </dependency>
     </dependencies>
 
 
