--- a/service/pom.xml
+++ b/service/pom.xml
@@ -13,6 +13,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.14</version>
+        </dependency>
+        <dependency>
             <groupId>cz.fi.muni.pa165</groupId>
             <artifactId>persistence</artifactId>
             <version>${project.parent.version}</version>
@@ -40,11 +45,6 @@
             <artifactId>mockito-core</artifactId>
             <version>3.3.3</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.security</groupId>
-            <artifactId>spring-security-core</artifactId>
-            <version>5.3.2.RELEASE</version>
         </dependency>
     </dependencies>
 
