--- a/service/pom.xml
+++ b/service/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>spring-security-core</artifactId>
             <version>5.3.2.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>5.3.2.RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
