--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,13 @@
             <artifactId>spring-webmvc</artifactId>
             <version>5.2.3.RELEASE</version>
         </dependency>
+        
+<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-annotations -->
+<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-annotations</artifactId>
+    <version>2.11.0</version>
+</dependency>
 
     </dependencies>
 
